--- a/Model/GAIT.ipynb
+++ b/Model/GAIT.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "244747db",
    "metadata": {},
    "outputs": [
@@ -770,56 +770,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n",
-      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
-      "1/1 [==============================] - 0s 106ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "not pushed\n",
+      "1/1 [==============================] - 0s 87ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "110\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "100\n",
+      "##########< Unknown identity >##########\n",
       "1/1 [==============================] - 0s 21ms/step\n",
-      "Omar Amin\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "100\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "034\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 15ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "Seif Ibrahim\n",
       "1/1 [==============================] - 0s 20ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "Omar Amin\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "118\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "082\n",
+      "##########< Unknown identity >##########\n",
       "1/1 [==============================] - 0s 16ms/step\n",
-      "Omar Amin\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Lance Moheb\n",
-      "End of video.\n",
-      "predictions array: ['Omar Amin', 'Mina Nady', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Omar Amin', 'Lance Moheb']\n",
-      "The most repeated element is: Omar Amin \n",
-      "Percentage:  88.88888888888889\n",
-      "Omar Amin\n"
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Hamza Tharwat\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
+      "Hamza Tharwat\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "082\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "Seif Ibrahim\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
+      "060\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "110\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "110\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "039\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
+      "060\n",
+      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "031\n",
+      "##########< Unknown identity >##########\n",
+      "predictions array: ['Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Hamza Tharwat', 'Hamza Tharwat', 'Seif Ibrahim']\n",
+      "The most repeated element is: Seif Ibrahim \n",
+      "Percentage:  86.66666666666667\n",
+      "Seif Ibrahim\n"
      ]
     }
    ],
    "source": [
-    "final_pred(\"Test_Samples/test8.mp4\",\"Saved_Models/train_45_9.h5\")"
+    "final_pred(\"Test_Samples/test2.mp4\",\"Saved_Models/train_55_6.h5\")"
    ]
   }
  ],
