--- a/Model/GAIT.ipynb
+++ b/Model/GAIT.ipynb
@@ -10,72 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3e7b4676-e428-4ec4-b851-e26a33947ddd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in C:\\Users\\lance/.cache\\torch\\hub\\pytorch_vision_v0.6.0\n",
-      "c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=DeepLabV3_ResNet101_Weights.COCO_WITH_VOC_LABELS_V1`. You can also use `weights=DeepLabV3_ResNet101_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model has been loaded.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in C:\\Users\\lance/.cache\\torch\\hub\\pytorch_vision_v0.6.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model has been loaded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Main Functions:\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import multilabel_confusion_matrix, accuracy_score\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.callbacks import TensorBoard\n",
+    "# # Main Functions:\n",
+    "# import cv2\n",
+    "# import numpy as np\n",
+    "# from sklearn.metrics import multilabel_confusion_matrix, accuracy_score\n",
+    "# from tensorflow import keras\n",
+    "# from tensorflow.keras.utils import to_categorical\n",
+    "# from tensorflow.keras import layers\n",
+    "# from tensorflow.keras.callbacks import TensorBoard\n",
     "\n",
-    "#  Functions:\n",
-    "import os\n",
-    "from glob import glob\n",
-    "from matplotlib import pyplot as plt\n",
-    "from collections import Counter\n",
+    "# #  Functions:\n",
+    "# import os\n",
+    "# from glob import glob\n",
+    "# from matplotlib import pyplot as plt\n",
+    "# from collections import Counter\n",
     "\n",
-    "# Developed Functions: \n",
-    "from Dev_Fun.Calibration_Show import Calib_Show, mediapipe_detection, draw_landmarks\n",
-    "from Dev_Fun.Dataset_Capture import files_creation, dataset_capture\n",
-    "from Dev_Fun.Pre_Process import pre_process, crop_to_person, sil_V1, sil_V2\n",
-    "from Dev_Fun.Predict import pred_show, final_pred"
+    "# # Developed Functions: \n",
+    "# from Dev_Fun.Calibration_Show import Calib_Show, mediapipe_detection, draw_landmarks\n",
+    "# from Dev_Fun.Dataset_Capture import files_creation, dataset_capture\n",
+    "# from Dev_Fun.Pre_Process import pre_process, crop_to_person, sil_V1, sil_V2\n",
+    "# from Dev_Fun.Predict import pred_show, final_pred"
    ]
   },
   {
@@ -89,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2ff11962",
    "metadata": {},
    "outputs": [],
@@ -109,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4ee1af69",
    "metadata": {},
    "outputs": [],
@@ -142,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2d0d868a",
    "metadata": {},
    "outputs": [],
@@ -169,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d3b3be96",
    "metadata": {},
    "outputs": [],
@@ -180,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c22cd3cf",
    "metadata": {},
    "outputs": [],
@@ -201,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e8c625fd",
    "metadata": {},
    "outputs": [],
@@ -229,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "121f9580",
    "metadata": {},
    "outputs": [],
@@ -259,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "927d8830",
    "metadata": {},
    "outputs": [],
@@ -277,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c48ad9a9",
    "metadata": {},
    "outputs": [],
@@ -289,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "40e268f3",
    "metadata": {},
    "outputs": [],
@@ -346,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b0081f1a",
    "metadata": {},
    "outputs": [],
@@ -360,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "58d69a2c",
    "metadata": {},
    "outputs": [],
@@ -423,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2eba8393",
    "metadata": {},
    "outputs": [],
@@ -436,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6baa2a94",
    "metadata": {},
    "outputs": [],
@@ -447,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dac84c0d",
    "metadata": {},
    "outputs": [],
@@ -530,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e709c08d",
    "metadata": {},
    "outputs": [],
@@ -543,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f37a905b",
    "metadata": {},
    "outputs": [],
@@ -564,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "566a8e7c",
    "metadata": {},
    "outputs": [],
@@ -575,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "342d552d",
    "metadata": {},
    "outputs": [],
@@ -613,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "cebb7782",
    "metadata": {},
    "outputs": [],
@@ -623,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "23bceec7",
    "metadata": {},
    "outputs": [],
@@ -641,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7a203c6f",
    "metadata": {},
    "outputs": [],
@@ -651,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f1aae120",
    "metadata": {},
    "outputs": [],
@@ -663,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "30b088dd",
    "metadata": {},
    "outputs": [],
@@ -677,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b7ee87f3",
    "metadata": {},
    "outputs": [],
@@ -687,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "ff2d91c0",
    "metadata": {},
    "outputs": [],
@@ -762,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "244747db",
    "metadata": {},
    "outputs": [
@@ -770,94 +729,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\lance\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
       "not pushed\n",
       "not pushed\n",
       "not pushed\n",
       "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "1/1 [==============================] - 0s 87ms/step\n",
+      "1/1 [==============================] - 0s 115ms/step\n",
       "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "110\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
-      "100\n",
-      "##########< Unknown identity >##########\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Mina Nady\n",
       "1/1 [==============================] - 0s 21ms/step\n",
-      "Seif Ibrahim\n",
+      "Mina Nady\n",
       "1/1 [==============================] - 0s 19ms/step\n",
-      "100\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "034\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "Seif Ibrahim\n",
+      "Mina Nady\n",
       "1/1 [==============================] - 0s 20ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "118\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "082\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Hamza Tharwat\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "Hamza Tharwat\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "082\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "060\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "110\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "110\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "039\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "060\n",
-      "##########< Unknown identity >##########\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "031\n",
-      "##########< Unknown identity >##########\n",
-      "predictions array: ['Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Seif Ibrahim', 'Hamza Tharwat', 'Hamza Tharwat', 'Seif Ibrahim']\n",
-      "The most repeated element is: Seif Ibrahim \n",
-      "Percentage:  86.66666666666667\n",
-      "Seif Ibrahim\n"
+      "Mina Nady\n",
+      "End of video.\n",
+      "predictions array: ['Seif Ibrahim', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady']\n",
+      "The most repeated element is: Mina Nady \n",
+      "Percentage:  90.9090909090909\n",
+      "Mina Nady\n",
+      "Mina Nady\n"
      ]
     }
    ],
    "source": [
-    "final_pred(\"Test_Samples/test2.mp4\",\"Saved_Models/train_55_6.h5\")"
+    "name = final_pred(\"Test_Samples/test4.mp4\",\"Saved_Models/train_55_6.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f6ccdb9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mina Nady\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
    ]
   }
  ],
