--- a/Model/GAIT.ipynb
+++ b/Model/GAIT.ipynb
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6e9e35e4",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "244747db",
    "metadata": {},
    "outputs": [
@@ -735,41 +735,25 @@
       "\n",
       "not pushed\n",
       "not pushed\n",
-      "not pushed\n",
-      "not pushed\n",
-      "1/1 [==============================] - 0s 115ms/step\n",
-      "Seif Ibrahim\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Mina Nady\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Mina Nady\n",
-      "End of video.\n",
-      "predictions array: ['Seif Ibrahim', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady', 'Mina Nady']\n",
-      "The most repeated element is: Mina Nady \n",
-      "Percentage:  90.9090909090909\n",
-      "Mina Nady\n",
-      "Mina Nady\n"
+      "not pushed\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[43mfinal_pred\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTest_Samples/test3.mp4\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSaved_Models/train_55_6.h5\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\lance\\Desktop\\Grad. Proj\\Implementation\\Model\\Dev_Fun\\Predict.py:89\u001b[0m, in \u001b[0;36mfinal_pred\u001b[1;34m(video, model_path)\u001b[0m\n\u001b[0;32m     79\u001b[0m names \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     80\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m119\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLance Moheb\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     81\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m120\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSeif Ibrahim\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m124\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHamza Tharwat\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     86\u001b[0m }\n\u001b[0;32m     88\u001b[0m finalPred \u001b[38;5;241m=\u001b[39m pred_show(video,model,names,subjects)\n\u001b[1;32m---> 89\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[43mhigh_prob\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfinalPred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28mprint\u001b[39m (name)\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m name\n",
+      "File \u001b[1;32mc:\\Users\\lance\\Desktop\\Grad. Proj\\Implementation\\Model\\Dev_Fun\\Predict.py:64\u001b[0m, in \u001b[0;36mhigh_prob\u001b[1;34m(predictions)\u001b[0m\n\u001b[0;32m     61\u001b[0m counts \u001b[38;5;241m=\u001b[39m Counter(predictions)\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# Find the most common element\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m most_common_element, count \u001b[38;5;241m=\u001b[39m \u001b[43mcounts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmost_common\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     66\u001b[0m percentage \u001b[38;5;241m=\u001b[39m (count \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(predictions)) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredictions array:\u001b[39m\u001b[38;5;124m\"\u001b[39m, predictions)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "name = final_pred(\"Test_Samples/test4.mp4\",\"Saved_Models/train_55_6.h5\")"
+    "name = final_pred(\"Test_Samples/test3.mp4\",\"Saved_Models/train_55_6.h5\")"
    ]
   },
   {
